--- a/home-page.css
+++ b/home-page.css
@@ -35,7 +35,7 @@ body {
   position: relative;
   display: grid;
   grid-template-columns: 0.01fr 0.98fr 0.01fr;
-  grid-template-rows: 0.08fr 0.5fr 1fr 0.5fr 0.05fr;
+  grid-template-rows: 0.08fr 0.89fr 1fr 0.5fr 0.05fr;
   justify-content: center;
   align-content: center;
 
@@ -57,6 +57,10 @@ body {
   /* background-color: rgba(73, 70, 70, 0.5); */
 }
 
+#pop-up-menu-wrapper {
+  display: none;
+}
+
 header {
   position: fixed;
   margin-top: 2%;
@@ -75,6 +79,10 @@ header {
   grid-row: 1 / 1;
 }
 
+.about-desk-head {
+  display: none;
+}
+
 .landing-page-home {
   /* grid-column: 2 / 3;
   grid-row: 2 / 2; */
@@ -88,8 +96,9 @@ header {
   background-repeat: no-repeat;
   background-size: cover; */
   justify-self: center;
-  padding-bottom: 8%;
-  padding-top: 25%;
+
+  /* padding-bottom: 8%; */
+  padding-top: 30%;
   margin-left: 5%;
 }
 
@@ -409,6 +418,10 @@ header {
   display: none;
 }
 
+.white-link {
+  display: none;
+}
+
 @media (min-width: 768px) {
   :root {
     --dates-font-size: 2rem;
@@ -425,9 +438,27 @@ header {
     position: relative;
     display: grid;
     grid-template-columns: 0.01fr 0.98fr 0.01fr;
-    grid-template-rows: 0.08fr 0.9fr 0.2fr 0.5fr 0.3fr 0.1fr;
+    grid-template-rows: 0.08fr 0.9fr 0.2fr 0.5fr 0.4fr 0.1fr;
     justify-content: center;
     align-content: center;
+  }
+
+  .about-mobile-head {
+    display: none;
+  }
+
+  .about-desk-head {
+    display: block;
+    position: fixed;
+    margin: 0;
+
+    /* z-index: 99; */
+    background-color: #fff;
+    height: 16%;
+    grid-column: 1 / -1;
+    grid-row: 1 / 1;
+    box-shadow: 2px 2px rgb(155, 165, 168);
+    font-family: var(--font-family-body);
   }
 
   .programs {
@@ -448,6 +479,7 @@ header {
     font-family: var(--font-family-body);
     background-color: rgba(243, 242, 242, 0.959);
     padding-top: 10%;
+    padding-bottom: 10%;
   }
 
   .contributors-grid {
@@ -459,6 +491,124 @@ header {
     /* grid-template-rows: repeat(auto, 1fr); */
     width: 100%;
     margin-bottom: 10%;
+  }
+
+  .sign-in-bar {
+    background-color: rgb(56, 53, 53);
+
+    /* position: relative; */
+    width: 99vw;
+    height: 6vh;
+    display: flex;
+    justify-content: end;
+  }
+
+  .sign-in-bar .fa-brands {
+    color: white;
+    margin-top: 1%;
+    margin-right: 2%;
+  }
+
+  .sign-in-bar ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    width: 20%;
+    margin-top: 1%;
+    margin-right: 8%;
+  }
+
+  .sign-in-bar ul a {
+    text-decoration: none;
+    font-family: var(--font-family-body);
+    color: white;
+  }
+
+  .white-part {
+    display: grid;
+    width: 100%;
+    position: relative;
+    grid-template-columns: 0.3fr 1fr 1.5fr;
+    grid-template-rows: 1fr;
+    align-content: center;
+  }
+
+  .menu-list ul a {
+    text-decoration: none;
+    color: #414246;
+    align-self: center;
+  }
+
+  .menu-list-list a:hover {
+    color: #f93c1f;
+  }
+
+  .about-desk-head .cc-image {
+    grid-column: 1 / 1;
+    margin-right: 2%;
+    margin-left: 15%;
+    color: #414246;
+    justify-self: end;
+  }
+
+  .about-desk-head .fa-closed-captioning {
+    font-size: 3.5rem;
+  }
+
+  .about-desk-head .text {
+    grid-column: 2 / 2;
+
+    /* text-align: center; */
+
+    /* display: flex; */
+    color: #414246;
+  }
+
+  .part-one-page-2 p {
+    font-size: 2rem;
+  }
+
+  .cell p {
+    grid-column: 1 / 1;
+    grid-row: 3 / -1;
+    justify-self: center;
+    text-align: center;
+  }
+
+  .about-desk-head .text p {
+    font-family: var(--font-family-body);
+  }
+
+  .menu-list ul a :hover {
+    color: #f93c1f;
+  }
+
+  .about-desk-head .text :nth-child(1) {
+    font-weight: 900;
+    font-size: 1.2rem;
+    color: #414246;
+  }
+
+  .about-desk-head .text :nth-child(2) {
+    font-weight: 900;
+    font-size: 0.8rem;
+    color: #414246;
+  }
+
+  .about-desk-head .text :nth-child(3) {
+    border: none;
+    color: #868992;
+  }
+
+  .menu-list ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    width: 98%;
+    position: relative;
+    align-self: center;
+    margin-top: 2.5%;
+    margin-right: 5%;
   }
 
   .contributor-4,
@@ -518,13 +668,6 @@ header {
   .cell h2 {
     grid-column: 1 / 1;
     grid-row: 2 / 3;
-    justify-self: center;
-    text-align: center;
-  }
-
-  .cell p {
-    grid-column: 1 / 1;
-    grid-row: 3 / -1;
     justify-self: center;
     text-align: center;
   }
@@ -616,10 +759,6 @@ header {
 
   .partners-2 .row-two {
     margin-left: 8%;
-  }
-
-  .contributors {
-    padding-bottom: 10%;
   }
 
   .credits {
