--- a/home-page.css
+++ b/home-page.css
@@ -24,6 +24,7 @@
   --logo-image-size: clamp(3rem, -1.4871794871794881rem + 23.931623931623935vw, 10rem);
   --dates-font-size: clamp(2rem, -1.7313432835820897rem + 11.940298507462686vw, 2.5rem);
   --programs-h3-font-size: clamp(1.4rem, 0.2805970149253729rem + 3.582089552238806vw, 2rem);
+  --landing-page-h3: clamp(1.8rem, -19.999999999999996rem + 44.99999999999999vw, 3.5rem);
 }
 
 body {
@@ -45,6 +46,8 @@ body {
   background-color: #f7f7f7;
   position: relative;
   display: grid;
+  justify-items: center;
+  align-items: center;
   grid-template-columns: 0.01fr 0.98fr 0.01fr;
 }
 
@@ -107,7 +110,6 @@ header {
   /* padding-bottom: 8%; */
   padding-top: 20%;
   padding-bottom: 20%;
-  margin-left: 5%;
   margin-bottom: -15%;
 }
 
@@ -116,9 +118,10 @@ header {
   font-family: var(--font-family-body);
   font-weight: 200;
   margin-bottom: 3%;
-  font-size: 1.6rem;
+  font-size: var(--landing-page-h3);
   text-align: left;
   background-color: transparent;
+  transform: translateX(6%);
 }
 
 .landing-page-home h1 {
@@ -127,17 +130,21 @@ header {
   color: #d42307;
   font-size: 4rem;
   font-size: var(--h1-font-size);
-  margin-bottom: 8%;
+  margin-bottom: 7%;
+  margin-right: 0;
+  width: 70%;
   text-align: left;
   background-color: transparent;
   mix-blend-mode: color-burn;
+  transform: translateX(10%);
 }
 
 .page-1-info {
-  width: 100%;
+  width: 90%;
   text-align: left;
   justify-self: center;
-  padding: 5%;
+  transform: translateX(4%);
+  /* padding: 5%; */
 }
 
 .page-1-info p {
@@ -147,8 +154,7 @@ header {
   border: 2px solid white;
   display: flex;
   text-align: left;
-
-  /* padding: 5%; */
+  padding: 3%;
   margin-bottom: 5%;
   position: relative;
   width: 100%;
@@ -214,6 +220,20 @@ header {
   font-stretch: ultra-expanded;
 }
 
+.minus-conatiner {
+  text-align: center;
+  position: relative;
+  width: 100%;
+}
+
+.minus-container .fa-minus {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 5rem;
+}
+
 .part-one-page-2 p {
   color: #414246;
   font-family: var(--font-family-body);
@@ -242,8 +262,12 @@ header {
   background-color: #2f2d2e;
   padding-top: 10%;
   height: 98%;
-  padding-bottom: 60%;
+  padding-bottom: 30%;
+  text-align: center;
+  background-image: linear-gradient(to bottom, rgba(18, 17, 36, 0.3), rgba(10, 10, 10, 0.3)), url('images/mainprogram.png');
+  overflow: hidden;
 }
+
 
 .programs h3 {
   font-family: var(--font-family-body);
@@ -258,6 +282,7 @@ header {
   width: 90%;
   margin-left: 5%;
   height: 80%;
+  text-align: center;
 }
 
 .program-grid h2 {
@@ -278,7 +303,7 @@ header {
   margin-bottom: 10%;
   padding-top: 5%;
   padding-bottom: 5%;
-  background-color: #534f4f;
+  background-color: rgba(83, 79, 79, 0.5);
 
   /* width: 90%; */
 }
@@ -313,14 +338,18 @@ header {
   margin-right: 5%;
 }
 
+.white-link {
+  padding-bottom: 5%;
+}
+
 .big-orange-button {
   text-align: center;
   width: 100%;
   padding-right: -5%;
   padding-left: -5%;
-  margin-bottom: 10%;
-  margin-top: 30%;
+  transform: translateY(10%);
   font-size: 1rem;
+  height: 120%;
 }
 
 .big-orange-button a {
@@ -345,7 +374,7 @@ header {
   text-align: center;
   font-family: var(--font-family-body);
   background-color: white;
-  padding-top: 10%;
+  padding-top: 5%;
   padding-bottom: 10%;
 }
 
@@ -355,7 +384,7 @@ header {
 
 .contributors-grid {
   padding-top: 5%;
-  text-align: left;
+  text-align: center;
   display: grid;
   grid-template-columns: 1fr;
 
@@ -495,34 +524,94 @@ header {
     /* z-index: 99; */
     background-color: #fff;
     height: 16%;
-    grid-column: 1 / -1;
+    grid-column-start: 1;
+    grid-column-end: 4;
     grid-row: 1 / 1;
     box-shadow: 2px 2px rgb(155, 165, 168);
     font-family: var(--font-family-body);
+    transform: translateX(-1%);
   }
 
-  .landing-page-home h1 {
+  .landing-page-home {
+    /* grid-column: 2 / 3;
+    grid-row: 2 / 2; */
+  
+    /* display: flex;
+      flex-direction: column; */
+  
+    /* margin-left: 20%; */
+  
+    /* background-image: url('images/Background -homepage.png');
+    background-repeat: no-repeat;
+    background-size: cover; */
+    justify-self: center;
+    align-self: center;
+  
+    /* padding-bottom: 8%; */
+    padding-top: 20%;
+    padding-bottom: 20%;
+    margin-left: 12%;
+    margin-bottom: -15%;
+  }
+
+  .landing-page-home h3 {
+    color: var(--header-color-red);
+    font-family: var(--font-family-body);
+    font-weight: 200;
     margin-bottom: 3%;
+    font-size: var(--landing-page-h3);
+    text-align: left;
+    background-color: transparent;
+    transform: none;
+  }
+  
+  .landing-page-home h1 {
+    font-family: var(--font-family-body);
+    font-weight: 900;
+    color: #d42307;
     font-size: 4rem;
+    margin-bottom: 3%;
+    margin-right: 12%;
+    text-align: left;
+    background-color: transparent;
+    mix-blend-mode: color-burn;
+    transform: none;
   }
 
   .programs {
     height: 80vh;
     padding-bottom: 35%;
+    text-align: center;
   }
 
   .program-grid {
     display: flex;
     height: 35vh;
     margin-bottom: 5%;
+    text-align: center;
   }
 
   .page-1-info {
     width: 60%;
+    transform: none;
   }
 
   .page-1-info p {
     width: 100%;
+  }
+
+  .minus-conatiner {
+    text-align: center;
+    position: relative;
+    width: 100%;
+  }
+  
+  .minus-container .fa-minus {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 5rem;
   }
 
   .contributors {
@@ -531,19 +620,22 @@ header {
     text-align: center;
     font-family: var(--font-family-body);
     background-color: rgba(243, 242, 242, 0.959);
-    padding-top: 10%;
+    height: 120vh;
+    /* padding-top: 10%; */
     padding-bottom: 10%;
   }
 
   .contributors-grid {
     padding-top: 5%;
-    text-align: left;
+    text-align: center;
     display: grid;
     grid-template-columns: 1fr 1fr;
 
     /* grid-template-rows: repeat(auto, 1fr); */
-    width: 100%;
-    margin-bottom: 10%;
+    width: 80%;
+    height: 100%;
+    /* margin-bottom: 10%; */
+    transform: translateX(13%);
   }
 
   .sign-in-bar {
@@ -599,6 +691,11 @@ header {
   }
 
   .menu-list-list a:hover {
+    color: #f93c1f;
+    border: 2px solid #f93c1f;
+  }
+
+  .just-clicked {
     color: #f93c1f;
     border: 2px solid #f93c1f;
   }
@@ -762,12 +859,16 @@ header {
 
   .partners {
     grid-row: 5 / 5;
-    grid-column: 2 / 2;
+    grid-column: 1 / -1;
     text-align: center;
     background-color: var(--partners-section-color);
     height: 100%;
     display: block;
-    padding-bottom: 6%;
+    width: 100%;
+    position: relative;
+    /* padding-bottom: 6%;
+    padding-left: 30%;
+    padding-right: 30%; */
   }
 
   .partners-1 {
@@ -800,27 +901,48 @@ header {
   .partners-2 {
     font-size: 3rem;
     color: #bbb;
+    display: flex;
+    width: 100%;
+    flex-direction: row-reverse;
+    /* transform: translateX(25%); */
+    justify-content: center;
+    padding-bottom: 8%;
   }
 
   .partners-2 .fa-minus {
-    margin-right: 65%;
+    /* margin-right: 65%; */
     font-size: 2rem;
   }
 
+  /* .fa-brands {
+    flex-grow: 1;
+  } */
+
   .partners-2 .fa-google {
-    margin-right: 8%;
+    /* margin-right: 8%; */
+    flex-grow: 1;
   }
 
   .partners-2 .fa-airbnb {
-    margin-right: 8%;
+    /* margin-right: 8%; */
+    flex-grow: 1;
   }
 
   .partners-2 .fa-paypal {
-    margin-right: 8%;
+    /* margin-right: 8%; */
+    flex-grow: 1;
+  }
+
+  .partners-2 .fa-facebook {
+    flex-grow: 1;
+  }
+
+  .partners-2 .fa-dropbox {
+    flex-grow: 1;
   }
 
   .partners-2 .row-two {
-    margin-left: 8%;
+    /* margin-left: 8%; */
   }
 
   .credits {
@@ -834,6 +956,7 @@ header {
     align-content: center;
     padding-bottom: 5%;
     padding-top: 5%;
+    width: 100%;
   }
 
   .credits .fa-copyright {
