--- a/styles.css
+++ b/styles.css
@@ -26,15 +26,16 @@
 
 body {
   background-color: #f7f7f7;
-  width: 99vw;
+  /* width: 99vw; */
 
-  /* height: 50%; */
+  /* height: 300vh; */
   position: relative;
   display: grid;
   grid-template-columns: 0.01fr 0.98fr 0.01fr;
-  grid-template-rows: 0.15fr 0.8fr 0.65fr 1fr 0.1fr;
+  /* grid-template-rows: 0.005fr 0.8fr 0.65fr 1fr 0.1fr; */
   justify-content: center;
   align-content: center;
+  overflow-x: hidden;
 }
 
 header {
@@ -65,8 +66,8 @@ header {
 }
 
 .landing-page-about {
-  grid-column: 2 / 3;
-  grid-row: 2 / 2;
+  grid-column: 1 / -1;
+  grid-row: 1 / 3;
 
   /* display: flex;
   flex-direction: column; */
@@ -74,8 +75,13 @@ header {
   /* margin-left: 20%; */
 
   justify-self: center;
-  padding-bottom: 8%;
-  margin-left: 5%;
+  padding-bottom: 25%;
+  padding-top: 8%;
+  background-image: url('images/about-bg.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+  margin-bottom: -20%;
 }
 
 .landing-page-about h3 {
@@ -83,7 +89,7 @@ header {
   font-family: var(--font-family-body);
   font-weight: 200;
   margin-bottom: 3%;
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   text-align: center;
 }
 
@@ -98,9 +104,11 @@ header {
 }
 
 .page-1-info {
-  width: 95%;
+  width: 100%;
   text-align: center;
   justify-self: center;
+  margin: 0 2%;
+  transform: translateX(-2%);
 }
 
 .page-1-info p {
@@ -108,7 +116,7 @@ header {
   color: var(--font-color-ash);
   background-color: white;
   border-color: #515151;
-  padding: 5%;
+  padding: 3% 5%;
   margin-bottom: 5%;
   position: relative;
   width: 100%;
@@ -129,6 +137,7 @@ header {
   text-align: center;
   border-bottom: 1px solid #d7d7da;
   padding-top: 8%;
+  padding-bottom: 8%;
 }
 
 .part-one-page-2 {
@@ -140,9 +149,11 @@ header {
 
 .page-2 h3 {
   font-family: var(--font-family-body);
-  font-size: 1.2rem;
+  font-size: 1.7rem;
   text-align: center;
-
+  word-break: break-all;
+  width: 100%;
+  height: 120%;
   /* margin-left: 8%; */
 }
 
@@ -161,7 +172,8 @@ header {
   font-family: var(--font-family-body);
   text-align: center;
   position: relative;
-  width: 100%;
+  width: 65%;
+  margin: 0 auto;
 
   /* margin-left: 8%; */
 }
@@ -246,7 +258,8 @@ header {
   width: 70%;
   padding-top: 10%;
   padding-bottom: 10%;
-  margin-left: 10%;
+  margin-left: auto;
+  margin-right: auto;
   height: 30vh;
 }
 
@@ -258,7 +271,6 @@ header {
 .red-box :nth-child(1) {
   font-size: var(--logo-2nd-line-font-size);
   font-weight: 500;
-  width: 70%;
 }
 
 .red-box-2 {
@@ -274,7 +286,8 @@ header {
   width: 70%;
   padding-top: 10%;
   padding-bottom: 10%;
-  margin-left: 10%;
+  margin-left: auto;
+  margin-right: auto;
   height: 30vh;
 }
 
@@ -311,6 +324,9 @@ header {
 .partners-2 {
   font-size: 3rem;
   color: #bbb;
+  margin: 0 auto;
+  width: 120%;
+  transform: translateX(3.8%);
 }
 
 .partners-2 .fa-minus {
@@ -318,16 +334,33 @@ header {
   font-size: 2rem;
 }
 
+.partners-2 .fa-brands {
+  font-size: 3rem;
+}
+
 .partners-2 .fa-google {
-  margin-right: 8%;
+  margin-right: 25%;
+}
+
+.partners-2 .fa-facebook {
+  margin-right: 25%;
+
+}
+
+.partners-2 .fa-dropbox {
+  margin-right: 25%;
 }
 
 .partners-2 .fa-airbnb {
-  margin-right: 8%;
+  margin-right: 25%;
 }
 
 .partners-2 .fa-paypal {
-  margin-right: 8%;
+  margin-right: 25%;
+}
+
+.row-two {
+  margin-top: 3%;
 }
 
 .credits {
@@ -335,8 +368,10 @@ header {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   text-align: center;
-
+  width: 85%;
+  margin: 0 auto;
   /* margin-left: 30%; */
+  padding-bottom: 5%;
 }
 
 .credits .fa-copyright {
@@ -368,6 +403,20 @@ header {
 /* DESKTOP VERSION */
 
 @media (min-width: 768px) {
+  body {
+    background-color: #f7f7f7;
+    /* width: 99vw; */
+  
+    /* height: 50%; */
+    position: relative;
+    display: grid;
+    grid-template-columns: 0.01fr 0.98fr 0.01fr;
+    grid-template-rows: 0.15fr 0.8fr 0.65fr 0.8fr 0.1fr;
+    justify-content: center;
+    align-content: center;
+    overflow-x: hidden;
+  }
+
   .about-mobile-head {
     display: none;
   }
@@ -506,8 +555,32 @@ header {
   }
 
   .landing-page-about {
-    padding: 0;
-  }
+  grid-column: 1 / -1;
+  grid-row: 2 / 2;
+
+  /* display: flex;
+  flex-direction: column; */
+
+  /* margin-left: 20%; */
+
+  justify-self: center;
+  padding-bottom: 8%;
+  background-image: url('images/about-bg.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  width: 100%;
+  padding-top: 5%;
+}
+
+  .page-1-info {
+  width: 80%;
+  text-align: center;
+  justify-self: center;
+  margin: 0 2%;
+  transform: translateX(10%);
+  position: relative;
+}
+
 
   .landing-page-about h3 {
     display: none;
@@ -517,9 +590,46 @@ header {
     padding-bottom: 10%;
   }
 
-  .part-one-page-2 h3 {
-    font-size: 3rem;
+  .part-one-page-2 {
+  text-align: center;
+  margin-bottom: 8%;
+  position: relative;
+  width: 100%;
   }
+
+  .part-one-page-2 br {
+    display: none;
+  }
+
+  .page-2 h3 {
+  font-family: var(--font-family-body);
+  font-size: 2rem;
+  text-align: center;
+  word-wrap: normal;
+  width: 100%;
+  /* margin-left: 8%; */
+}
+
+  .part-one-page-2 p {
+    font-size: 1.2rem;
+    width: 70%;
+    margin: 0;
+    transform: translateX(20%);
+  }
+
+  .part-2-grid {
+    width: 60%;
+  }
+
+  /* .cc-image {
+    margin-right: 5%;
+    flex-grow: 1;
+  }
+
+  .page-2 .text {
+    text-align: center;
+    flex-grow: 1;
+  } */
 
   .red-box-section {
     width: 99vw;
@@ -531,21 +641,29 @@ header {
     grid-template-rows: 1fr;
     text-align: center;
     align-content: center;
-    margin-right: 2%;
+    width: 80%;
+    /* transform: translateX(10%); */
+    margin: 0 auto;
   }
 
   .red-box {
     grid-column: 1 / 1;
     width: 30vw;
-    height: 40vh;
+    height: 35vh;
     align-self: center;
+    justify-self: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .red-box-2 {
     grid-column: 2 / 2;
     width: 30vw;
-    height: 40vh;
+    height: 35vh;
     align-self: center;
+    justify-self: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .partners {
@@ -563,6 +681,7 @@ header {
     grid-template-columns: 1fr 1.5fr 1fr 1fr;
     grid-template-rows: 1fr;
     align-content: center;
+    padding: 0;
   }
 
   .company-credits-1 {
