--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,14 @@
 
 body {
   background-color: #f7f7f7;
+
   /* width: 99vw; */
 
   /* height: 300vh; */
   position: relative;
   display: grid;
   grid-template-columns: 0.01fr 0.98fr 0.01fr;
+
   /* grid-template-rows: 0.005fr 0.8fr 0.65fr 1fr 0.1fr; */
   justify-content: center;
   align-content: center;
@@ -91,6 +93,19 @@ header {
   margin-bottom: 3%;
   font-size: 1.2rem;
   text-align: center;
+}
+
+.minus-container {
+  text-align: center;
+  position: relative;
+
+  /* background-color: var(--header-color-red); */
+  border-bottom: 1px solid var(--header-color-red);
+  width: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 .landing-page-about h1 {
@@ -154,6 +169,7 @@ header {
   word-break: break-all;
   width: 100%;
   height: 120%;
+
   /* margin-left: 8%; */
 }
 
@@ -344,7 +360,6 @@ header {
 
 .partners-2 .fa-facebook {
   margin-right: 25%;
-
 }
 
 .partners-2 .fa-dropbox {
@@ -370,6 +385,7 @@ header {
   text-align: center;
   width: 85%;
   margin: 0 auto;
+
   /* margin-left: 30%; */
   padding-bottom: 5%;
 }
@@ -405,8 +421,9 @@ header {
 @media (min-width: 768px) {
   body {
     background-color: #f7f7f7;
+
     /* width: 99vw; */
-  
+
     /* height: 50%; */
     position: relative;
     display: grid;
@@ -517,6 +534,9 @@ header {
 
   .part-one-page-2 p {
     font-size: 2rem;
+    width: 70%;
+    margin: 0;
+    transform: translateX(20%);
   }
 
   .about-desk-head .text p {
@@ -555,32 +575,31 @@ header {
   }
 
   .landing-page-about {
-  grid-column: 1 / -1;
-  grid-row: 2 / 2;
+    grid-column: 1 / -1;
+    grid-row: 2 / 2;
 
-  /* display: flex;
+    /* display: flex;
   flex-direction: column; */
 
-  /* margin-left: 20%; */
+    /* margin-left: 20%; */
 
-  justify-self: center;
-  padding-bottom: 8%;
-  background-image: url('images/about-bg.png');
-  background-repeat: no-repeat;
-  background-size: 100%;
-  width: 100%;
-  padding-top: 5%;
-}
+    justify-self: center;
+    padding-bottom: 8%;
+    background-image: url('images/about-bg.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    padding-top: 5%;
+  }
 
   .page-1-info {
-  width: 80%;
-  text-align: center;
-  justify-self: center;
-  margin: 0 2%;
-  transform: translateX(10%);
-  position: relative;
-}
-
+    width: 80%;
+    text-align: center;
+    justify-self: center;
+    margin: 0 2%;
+    transform: translateX(10%);
+    position: relative;
+  }
 
   .landing-page-about h3 {
     display: none;
@@ -591,10 +610,10 @@ header {
   }
 
   .part-one-page-2 {
-  text-align: center;
-  margin-bottom: 8%;
-  position: relative;
-  width: 100%;
+    text-align: center;
+    margin-bottom: 8%;
+    position: relative;
+    width: 100%;
   }
 
   .part-one-page-2 br {
@@ -602,20 +621,21 @@ header {
   }
 
   .page-2 h3 {
-  font-family: var(--font-family-body);
-  font-size: 2rem;
-  text-align: center;
-  word-wrap: normal;
-  width: 100%;
-  /* margin-left: 8%; */
-}
+    font-family: var(--font-family-body);
+    font-size: 2rem;
+    text-align: center;
+    word-wrap: normal;
+    width: 100%;
 
-  .part-one-page-2 p {
+    /* margin-left: 8%; */
+  }
+
+  /* .part-one-page-2 p {
     font-size: 1.2rem;
     width: 70%;
     margin: 0;
     transform: translateX(20%);
-  }
+  } */
 
   .part-2-grid {
     width: 60%;
@@ -642,6 +662,7 @@ header {
     text-align: center;
     align-content: center;
     width: 80%;
+
     /* transform: translateX(10%); */
     margin: 0 auto;
   }
